<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="40sp"
            android:paddingTop="70dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_bottom_black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                android:text="@string/name"
/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLastname"
                android:text="@string/lastname"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:text="@string/email"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPass"
                android:text="@string/password"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/btnSignUp"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvConfirm"
                android:textColor="@color/black"
                android:autoLink="web"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</layout>