<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="40dp"
            android:paddingTop="70dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_bottom_black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:text="@string/email"
                android:layout_marginTop="30dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPass"
                android:text="@string/password"
                android:layout_marginTop="30dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:id="@+id/btnSignIn"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/black"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
</layout>